[metadata]
name = moc_acct_mgt
version = attr: moc_acct_mgt.__version__
description = MOC account management microservice
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/larsks/openshift-acct-req
author = Lars Kellogg-Stedman
author_email = lars@oddbit.com

[options]
packages = find:
include_package_data = True
install_requires =
  gunicorn
  flask
  flask_httpauth
  kubernetes
